--- a/ReviewQueue.html
+++ b/ReviewQueue.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>内容审核 - 天合短剧剪辑接单平台</title>
+  <title>订单审核 - 天合短剧剪辑接单平台</title>
   
   <!-- Ant Design CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/antd@5.12.8/dist/reset.css">
@@ -495,7 +495,7 @@
                 <span className="menuItemIcon">📋</span>
                 接单大厅
               </a>
-              <a href="ProjectHall.html?tab=leaderboard" className="menuItem">
+              <a href="Leaderboard.html" className="menuItem">
                 <span className="menuItemIcon">🏆</span>
                 天梯榜单
               </a>
@@ -512,7 +512,7 @@
                 <div className="menuGroupTitle">后台管理</div>
                 <a href="ReviewQueue.html" className="menuItem active">
                   <span className="menuItemIcon">✅</span>
-                  内容审核
+                  订单审核
                 </a>
                 <a href="ProjectManagement.html" className="menuItem">
                   <span className="menuItemIcon">📋</span>
@@ -538,7 +538,7 @@
           <div className="mainContent">
             <div className="reviewPage">
               <div className="pageHeader">
-                <Title level={2} style={{ margin: 0 }}>内容审核</Title>
+                <Title level={2} style={{ margin: 0 }}>订单审核</Title>
               </div>
 
               {/* 筛选区 */}
