--- a/ProjectDetail.html
+++ b/ProjectDetail.html
@@ -348,7 +348,7 @@
                 <span className="menuItemIcon">📋</span>
                 接单大厅
               </a>
-              <a href="ProjectHall.html?tab=leaderboard" className="menuItem">
+              <a href="Leaderboard.html" className="menuItem">
                 <span className="menuItemIcon">🏆</span>
                 天梯榜单
               </a>
@@ -365,7 +365,7 @@
                 <div className="menuGroupTitle">后台管理</div>
                 <a href="ReviewQueue.html" className="menuItem">
                   <span className="menuItemIcon">✅</span>
-                  内容审核
+                  订单审核
                 </a>
                 <a href="ProjectManagement.html" className="menuItem active">
                   <span className="menuItemIcon">📋</span>
