修改总结 1. 接单大厅（ProjectHall.html） 添加 getApplicationStatus：检查项目申请状态（已接单、已申请等） 添加 getButtonConfig：根据申请状态返回按钮配置 按钮显示逻辑： 已接单：显示"已接单，前往空间"，可点击跳转 待审核：显示"报名状态：待审核"，禁用 已通过：显示"报名状态：已通过"，可点击跳转 已驳回：显示"报名状态：已驳回"，禁用，并显示驳回原因 修改 handleTakeOrder：已驳回的申请不允许重新报名 2. 我的项目（MyProjects.html） 修改 loadOrders：读取并展示被驳回的申请（status='Rejected'） 表格列调整： "订单号"列改为"订单号/申请单号"，申请记录显示申请单号 "状态"列显示驳回原因（如有） "操作"列：被驳回的申请显示"申请已驳回"，不显示"项目空间"按钮 状态筛选：添加"已驳回"选项 功能实现 接单大厅：被驳回的项目显示"已驳回"状态和驳回原因 我的项目：被驳回的申请会展示，并显示驳回原因 接单大厅：已申请的项目显示相应状态标识

--- a/MyProjects.html
+++ b/MyProjects.html
@@ -194,8 +194,37 @@
             estimatedAmount: estimatedAmount,
             actualAmount: actualAmount,
             deduction: deduction,
+            isOrder: true, // 标记为订单
           };
         });
+
+        // 读取被驳回的申请
+        const applications = JSON.parse(localStorage.getItem('applications') || '[]');
+        const rejectedApplications = applications
+          .filter(app => 
+            app.applicant === '当前用户' && 
+            app.status === 'Rejected'
+          )
+          .map(app => ({
+            id: app.id,
+            orderId: null, // 申请没有订单号
+            applicationId: app.id,
+            projectId: app.projectId,
+            projectName: app.projectName,
+            takeTime: app.applyTime,
+            dueTime: null,
+            status: 'Rejected',
+            amount: 0,
+            estimatedAmount: 0,
+            actualAmount: 0,
+            deduction: 0,
+            isOrder: false, // 标记为申请
+            rejectReason: app.rejectReason,
+            reviewTime: app.reviewTime,
+          }));
+
+        // 合并订单和被驳回的申请
+        data = [...data, ...rejectedApplications];
         
         setOrders(data);
         setLoading(false);
@@ -245,6 +274,7 @@
         'Approved': { color: 'green', text: '审核通过' },
         'Accepted': { color: 'success', text: '已验收' },
         'Closed': { color: 'default', text: '已关闭' },
+        'Rejected': { color: 'red', text: '已驳回' },
       };
 
       const goToSpace = (record) => {
@@ -269,11 +299,16 @@
 
       const columns = [
         {
-          title: '订单号',
+          title: '订单号/申请单号',
           dataIndex: 'orderId',
           key: 'orderId',
           width: 160,
-          render: (val, r) => val || r.id,
+          render: (val, r) => {
+            if (r.isOrder === false && r.applicationId) {
+              return r.applicationId || '-';
+            }
+            return val || r.id || '-';
+          },
         },
         {
           title: '项目名称',
@@ -299,10 +334,19 @@
           title: '状态',
           dataIndex: 'status',
           key: 'status',
-          width: 120,
-          render: (status) => {
+          width: 150,
+          render: (status, record) => {
             const c = statusMap[status] || { color: 'default', text: status };
-            return <Tag color={c.color}>{c.text}</Tag>;
+            return (
+              <div>
+                <Tag color={c.color}>{c.text}</Tag>
+                {status === 'Rejected' && record.rejectReason && (
+                  <div style={{ marginTop: 4, fontSize: 12, color: '#ff4d4f' }}>
+                    驳回原因：{record.rejectReason}
+                  </div>
+                )}
+              </div>
+            );
           },
         },
         {
@@ -342,11 +386,17 @@
           title: '操作',
           key: 'action',
           width: 120,
-          render: (_, record) => (
-            <Button type="primary" size="small" onClick={() => goToSpace(record)}>
-              项目空间
-            </Button>
-          ),
+          render: (_, record) => {
+            // 被驳回的申请不显示"进入空间"按钮
+            if (record.status === 'Rejected' && record.isOrder === false) {
+              return <span style={{ color: '#8c8c8c', fontSize: 12 }}>申请已驳回</span>;
+            }
+            return (
+              <Button type="primary" size="small" onClick={() => goToSpace(record)}>
+                项目空间
+              </Button>
+            );
+          },
         },
       ];
 
@@ -425,6 +475,7 @@
                     <Option value="Approved">审核通过</Option>
                     <Option value="Accepted">已验收</Option>
                     <Option value="Closed">已关闭</Option>
+                    <Option value="Rejected">已驳回</Option>
                   </Select>
                 </Space>
               </div>
